syntax = "proto3";

package proto;

option go_package = "user/internal/proto";

service Computer{
  rpc CallComputer (Empty) returns(ResponseComputer){}
}

message Empty{}

message ResponseComputer{
  string value = 1;
}

service Result{
  rpc CallResult (RequestResult) returns(ResponseResult){}
}

message RequestResult{
  string userValue = 1;
  string computerValue = 2;
}

message ResponseResult{
  string winner = 1;
}



